fixed youtube player flickering bug

--- a/src/app/components/shared/youtube-player/youtube-player.component.scss
+++ b/src/app/components/shared/youtube-player/youtube-player.component.scss
@@ -1,4 +1,5 @@
 :host {
+  position: relative;
   min-width: 100%
 }
 
@@ -32,6 +33,7 @@ youtube-player {
 
 .thumbnail {
   position: absolute;
+  z-index: 1;
   border-radius: 12px;
   overflow: hidden;
   top: 0;
